# claude-usage-dashboard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  README_CN.md  STYLE.md  next.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
.github/workflows/: test.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/routers/: __init__.py  stats.py  usage.py  websocket.py
backend/app/services/: data_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_data_service.py
docker/: docker-compose.dev.yml  docker-compose.yml  nginx.conf
public/: manifest.json
scripts/: setup-tunnel.sh  sync-data.sh
src/__tests__/: setup.ts  setup.tsx  test-utils.tsx
src/__tests__/components/: plan-usage-card.test.tsx  stats-card.test.tsx
src/__tests__/hooks/: use-usage-data.test.tsx  use-websocket.test.tsx
src/app/: layout.tsx  page.tsx
src/app/sessions/: page.tsx
src/app/settings/: page.tsx
src/app/statistics/: page.tsx
src/app/tabs/: analytics-tab.tsx  index.ts  models-tab.tsx  overview-tab.tsx
src/components/charts/: index.ts  model-distribution.tsx  token-breakdown.tsx  usage-trend.tsx
src/components/dashboard/: cost-card.tsx  index.ts  plan-selector.tsx  plan-usage-card.tsx  session-timer.tsx  stats-card.tsx
src/components/layout/: app-layout.tsx  header.tsx  index.ts  mobile-nav.tsx  sidebar.tsx
src/components/providers/: index.tsx  query-provider.tsx  theme-provider.tsx
src/components/ui/: animated-number.tsx
src/hooks/: index.ts  use-usage-data.ts  use-websocket.ts
src/lib/: api.ts
src/stores/: settings-store.ts
src/types/: index.ts
